large commit, issues with pushing of big files, some history lost

--- a/Code/Jupyter/UrbanSound8k decrypter.ipynb
+++ b/Code/Jupyter/UrbanSound8k decrypter.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "*Turning the UrbanSound8k dataset into a class-based file structure for later augmentation*\n",
     "\n",
-    "This script essentially **un-does** the already prepared shuffling of the data set against overfitting. It gathers all information from the csv-file, creates the folder structure and copies the files with the right class index into the corresponding folder. This is necessary "
+    "This script essentially **un-does** the already prepared shuffling of the data set against overfitting. It gathers all information from the csv-file, creates the folder structure and copies the files with the right class index into the corresponding folder."
    ]
   },
   {
@@ -30,7 +30,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The following paragraph maps als file names to their class to reverse-engineer a class based file structure"
+    "The following paragraph maps all file names to their class to reverse-engineer a class based file structure"
    ]
   },
   {
