now running on config-frontend

--- a/Code/Jupyter/CNN Training.ipynb
+++ b/Code/Jupyter/CNN Training.ipynb
@@ -9,22 +9,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import json\n",
-    "from sklearn.preprocessing import LabelEncoder, StandardScaler\n",
     "from sklearn.model_selection import train_test_split\n",
+    "import pipeline.config as conf\n",
+    "import pipeline.scale as scale\n",
+    "import octafilt3r.plot as o3p"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "param_dict = conf.open_params()\n",
     "\n",
-    "with open('param_dict.json') as f:\n",
-    "    content = f.read()\n",
-    "\n",
-    "param_dict = json.loads(content)\n",
-    "\n",
-    "labels = np.loadtxt(\"Datasets/Feature_extraction/labels.txt\", dtype='str')\n",
-    "df_2d = np.loadtxt(\"Datasets/Feature_extraction/th_oct_feature.txt\")\n",
+    "labels = np.loadtxt(param_dict[\"label_txt_fp\"], dtype='str')\n",
+    "df_2d = np.loadtxt(param_dict[\"extr_txt_fp\"])\n",
     "df = df_2d.reshape(df_2d.shape[0], df_2d.shape[1] // param_dict['n_bands'], param_dict['n_bands'])"
    ]
   },
@@ -55,10 +60,14 @@
    ],
    "source": [
     "# sanity check:\n",
-    "import octafilt3r.plot as o3p\n",
-    "\n",
     "print(df.shape)\n",
-    "o3p.oct_spectrogram(df[600], param_dict['fs'], param_dict['frame_size'], param_dict['fmax'], param_dict['fmin'], param_dict['oct_bw_ratio'], labels[600])"
+    "o3p.oct_spectrogram(df[600], \n",
+    "                    param_dict['fs'], \n",
+    "                    param_dict['frame_size'], \n",
+    "                    param_dict['fmax'], \n",
+    "                    param_dict['fmin'], \n",
+    "                    param_dict['oct_bw_ratio'], \n",
+    "                    labels[600])"
    ]
   },
   {
@@ -77,26 +86,8 @@
     }
    ],
    "source": [
-    "def data_scaler(df):\n",
-    "    X = np.zeros((len(df), len(df[0]), len(df[0][0])))\n",
-    "    scaler = StandardScaler()\n",
-    "    for win in range(len(df)):\n",
-    "        X[win] = scaler.fit_transform(df[win])\n",
-    "\n",
-    "    X = X[..., np.newaxis]\n",
-    "\n",
-    "    return X, scaler\n",
-    "\n",
-    "\n",
-    "def label_encode(labels):\n",
-    "    encoder = LabelEncoder()\n",
-    "    y = encoder.fit_transform(labels)\n",
-    "    \n",
-    "    return y, encoder\n",
-    "\n",
-    "\n",
-    "y, encoder = label_encode(labels)\n",
-    "X, scaler = data_scaler(df)\n",
+    "y, encoder = scale.label_encode(labels)\n",
+    "X, scaler = scale.data_scaler(df)\n",
     "print(f'Encoded labels:\\n{y}')\n",
     "print(f'Shape of data frame: {X.shape}')\n",
     "# Dividing data into training and Testing set\n",
@@ -506,285 +497,7 @@
     "score, accuracy = model.evaluate(X_test, y_test, batch_size=4)\n",
     "print(\"\\nAccuracy = {:.2f}\".format(accuracy))\n",
     "\n",
-    "nn_name = input('Name the current instance of the network: ')\n",
-    "\n",
-    "model.save('NACED_V-0-1')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(1) Predicted class: \"street_music\" with 100 score.\n",
-      "(2) Predicted class: \"street_music\" with 99 score.\n",
-      "(3) Predicted class: \"street_music\" with 99 score.\n",
-      "(4) Predicted class: \"street_music\" with 99 score.\n",
-      "(5) Predicted class: \"street_music\" with 100 score.\n",
-      "(6) Predicted class: \"street_music\" with 99 score.\n",
-      "(7) Predicted class: \"street_music\" with 98 score.\n",
-      "(8) Predicted class: \"street_music\" with 99 score.\n",
-      "(9) Predicted class: \"street_music\" with 94 score.\n",
-      "(10) Predicted class: \"street_music\" with 99 score.\n",
-      "(11) Predicted class: \"street_music\" with 99 score.\n",
-      "(12) Predicted class: \"street_music\" with 99 score.\n",
-      "(13) Predicted class: \"street_music\" with 99 score.\n",
-      "(14) Predicted class: \"street_music\" with 99 score.\n",
-      "(15) Predicted class: \"street_music\" with 99 score.\n",
-      "(16) Predicted class: \"street_music\" with 90 score.\n",
-      "(17) Predicted class: \"street_music\" with 99 score.\n",
-      "(18) Predicted class: \"street_music\" with 99 score.\n",
-      "(19) Predicted class: \"street_music\" with 100 score.\n",
-      "(20) Predicted class: \"street_music\" with 99 score.\n",
-      "(21) Predicted class: \"street_music\" with 99 score.\n",
-      "(22) Predicted class: \"street_music\" with 99 score.\n",
-      "(23) Predicted class: \"street_music\" with 100 score.\n",
-      "(24) Predicted class: \"street_music\" with 99 score.\n",
-      "(25) Predicted class: \"street_music\" with 100 score.\n",
-      "(26) Predicted class: \"street_music\" with 100 score.\n",
-      "(27) Predicted class: \"street_music\" with 100 score.\n",
-      "(28) Predicted class: \"street_music\" with 100 score.\n",
-      "(29) Predicted class: \"street_music\" with 100 score.\n",
-      "(30) Predicted class: \"street_music\" with 99 score.\n",
-      "(31) Predicted class: \"street_music\" with 99 score.\n",
-      "(32) Predicted class: \"drilling\" with 83 score.\n",
-      "(33) Predicted class: \"street_music\" with 99 score.\n",
-      "(34) Predicted class: \"street_music\" with 99 score.\n",
-      "(35) Predicted class: \"street_music\" with 100 score.\n",
-      "(36) Predicted class: \"street_music\" with 99 score.\n",
-      "(37) Predicted class: \"street_music\" with 100 score.\n",
-      "(38) Predicted class: \"street_music\" with 99 score.\n",
-      "(39) Predicted class: \"street_music\" with 100 score.\n",
-      "(40) Predicted class: \"street_music\" with 100 score.\n",
-      "(41) Predicted class: \"street_music\" with 99 score.\n",
-      "(42) Predicted class: \"street_music\" with 100 score.\n",
-      "(43) Predicted class: \"street_music\" with 100 score.\n",
-      "(44) Predicted class: \"street_music\" with 100 score.\n",
-      "(45) Predicted class: \"street_music\" with 99 score.\n",
-      "(46) Predicted class: \"street_music\" with 100 score.\n",
-      "(47) Predicted class: \"street_music\" with 99 score.\n",
-      "(48) Predicted class: \"street_music\" with 99 score.\n",
-      "(49) Predicted class: \"street_music\" with 99 score.\n",
-      "(50) Predicted class: \"street_music\" with 99 score.\n",
-      "(51) Predicted class: \"street_music\" with 99 score.\n",
-      "(52) Predicted class: \"street_music\" with 100 score.\n",
-      "(53) Predicted class: \"street_music\" with 100 score.\n",
-      "(54) Predicted class: \"street_music\" with 98 score.\n",
-      "(55) Predicted class: \"street_music\" with 82 score.\n",
-      "(56) Predicted class: \"street_music\" with 99 score.\n",
-      "(57) Predicted class: \"street_music\" with 99 score.\n",
-      "(58) Predicted class: \"street_music\" with 99 score.\n",
-      "(59) Predicted class: \"street_music\" with 99 score.\n",
-      "(60) Predicted class: \"street_music\" with 100 score.\n",
-      "(61) Predicted class: \"street_music\" with 99 score.\n",
-      "(62) Predicted class: \"street_music\" with 100 score.\n",
-      "(63) Predicted class: \"street_music\" with 100 score.\n",
-      "(64) Predicted class: \"street_music\" with 100 score.\n",
-      "(65) Predicted class: \"street_music\" with 100 score.\n",
-      "(66) Predicted class: \"street_music\" with 99 score.\n",
-      "(67) Predicted class: \"street_music\" with 99 score.\n",
-      "(68) Predicted class: \"street_music\" with 99 score.\n",
-      "(69) Predicted class: \"street_music\" with 99 score.\n",
-      "(70) Predicted class: \"street_music\" with 99 score.\n",
-      "(71) Predicted class: \"children_playing\" with 99 score.\n",
-      "(72) Predicted class: \"street_music\" with 88 score.\n",
-      "(73) Predicted class: \"street_music\" with 99 score.\n",
-      "(74) Predicted class: \"street_music\" with 99 score.\n",
-      "(75) Predicted class: \"street_music\" with 99 score.\n",
-      "(76) Predicted class: \"street_music\" with 99 score.\n",
-      "(77) Predicted class: \"street_music\" with 99 score.\n",
-      "(78) Predicted class: \"street_music\" with 100 score.\n",
-      "(79) Predicted class: \"street_music\" with 100 score.\n",
-      "(80) Predicted class: \"street_music\" with 97 score.\n",
-      "(81) Predicted class: \"street_music\" with 99 score.\n",
-      "(82) Predicted class: \"street_music\" with 99 score.\n",
-      "(83) Predicted class: \"street_music\" with 100 score.\n",
-      "(84) Predicted class: \"street_music\" with 99 score.\n",
-      "(85) Predicted class: \"street_music\" with 100 score.\n",
-      "(86) Predicted class: \"street_music\" with 96 score.\n",
-      "(87) Predicted class: \"street_music\" with 99 score.\n",
-      "(88) Predicted class: \"street_music\" with 99 score.\n",
-      "(89) Predicted class: \"street_music\" with 97 score.\n",
-      "(90) Predicted class: \"street_music\" with 99 score.\n",
-      "(91) Predicted class: \"street_music\" with 99 score.\n",
-      "(92) Predicted class: \"street_music\" with 99 score.\n",
-      "(93) Predicted class: \"street_music\" with 96 score.\n",
-      "(94) Predicted class: \"street_music\" with 99 score.\n",
-      "(95) Predicted class: \"street_music\" with 100 score.\n",
-      "(96) Predicted class: \"street_music\" with 99 score.\n",
-      "(97) Predicted class: \"street_music\" with 64 score.\n",
-      "(98) Predicted class: \"street_music\" with 100 score.\n",
-      "(99) Predicted class: \"street_music\" with 100 score.\n",
-      "(100) Predicted class: \"street_music\" with 100 score.\n",
-      "(101) Predicted class: \"street_music\" with 99 score.\n",
-      "(102) Predicted class: \"street_music\" with 99 score.\n",
-      "(103) Predicted class: \"street_music\" with 99 score.\n",
-      "(104) Predicted class: \"street_music\" with 100 score.\n",
-      "(105) Predicted class: \"street_music\" with 92 score.\n",
-      "(106) Predicted class: \"street_music\" with 99 score.\n",
-      "(107) Predicted class: \"street_music\" with 99 score.\n",
-      "(108) Predicted class: \"street_music\" with 99 score.\n",
-      "(109) Predicted class: \"street_music\" with 100 score.\n",
-      "(110) Predicted class: \"street_music\" with 99 score.\n",
-      "(111) Predicted class: \"street_music\" with 99 score.\n",
-      "(112) Predicted class: \"street_music\" with 99 score.\n",
-      "(113) Predicted class: \"street_music\" with 99 score.\n",
-      "(114) Predicted class: \"street_music\" with 99 score.\n",
-      "(115) Predicted class: \"street_music\" with 99 score.\n",
-      "(116) Predicted class: \"street_music\" with 98 score.\n",
-      "(117) Predicted class: \"street_music\" with 99 score.\n",
-      "(118) Predicted class: \"street_music\" with 100 score.\n",
-      "(119) Predicted class: \"street_music\" with 100 score.\n",
-      "(120) Predicted class: \"street_music\" with 99 score.\n",
-      "(121) Predicted class: \"street_music\" with 100 score.\n",
-      "(122) Predicted class: \"street_music\" with 94 score.\n",
-      "(123) Predicted class: \"street_music\" with 100 score.\n",
-      "(124) Predicted class: \"street_music\" with 99 score.\n",
-      "(125) Predicted class: \"street_music\" with 99 score.\n",
-      "(126) Predicted class: \"street_music\" with 76 score.\n",
-      "(127) Predicted class: \"street_music\" with 99 score.\n",
-      "(128) Predicted class: \"street_music\" with 100 score.\n",
-      "(129) Predicted class: \"street_music\" with 99 score.\n",
-      "(130) Predicted class: \"street_music\" with 99 score.\n",
-      "(131) Predicted class: \"drilling\" with 49 score.\n",
-      "(132) Predicted class: \"street_music\" with 100 score.\n",
-      "(133) Predicted class: \"street_music\" with 100 score.\n",
-      "(134) Predicted class: \"street_music\" with 100 score.\n",
-      "(135) Predicted class: \"jackhammer\" with 92 score.\n",
-      "(136) Predicted class: \"street_music\" with 88 score.\n",
-      "(137) Predicted class: \"street_music\" with 90 score.\n",
-      "(138) Predicted class: \"street_music\" with 52 score.\n",
-      "(139) Predicted class: \"drilling\" with 89 score.\n",
-      "(140) Predicted class: \"children_playing\" with 98 score.\n",
-      "(141) Predicted class: \"street_music\" with 99 score.\n",
-      "(142) Predicted class: \"street_music\" with 99 score.\n",
-      "(143) Predicted class: \"street_music\" with 99 score.\n",
-      "(144) Predicted class: \"street_music\" with 100 score.\n",
-      "(145) Predicted class: \"street_music\" with 99 score.\n",
-      "(146) Predicted class: \"street_music\" with 99 score.\n",
-      "(147) Predicted class: \"street_music\" with 99 score.\n",
-      "(148) Predicted class: \"street_music\" with 99 score.\n",
-      "(149) Predicted class: \"street_music\" with 100 score.\n",
-      "(150) Predicted class: \"street_music\" with 99 score.\n",
-      "(151) Predicted class: \"street_music\" with 100 score.\n",
-      "(152) Predicted class: \"street_music\" with 80 score.\n",
-      "(153) Predicted class: \"street_music\" with 98 score.\n",
-      "(154) Predicted class: \"street_music\" with 99 score.\n",
-      "(155) Predicted class: \"street_music\" with 99 score.\n",
-      "(156) Predicted class: \"street_music\" with 99 score.\n",
-      "(157) Predicted class: \"street_music\" with 99 score.\n",
-      "(158) Predicted class: \"street_music\" with 99 score.\n",
-      "(159) Predicted class: \"street_music\" with 99 score.\n",
-      "(160) Predicted class: \"street_music\" with 100 score.\n",
-      "(161) Predicted class: \"street_music\" with 99 score.\n",
-      "(162) Predicted class: \"street_music\" with 99 score.\n",
-      "(163) Predicted class: \"street_music\" with 100 score.\n",
-      "(164) Predicted class: \"dog_bark\" with 49 score.\n",
-      "(165) Predicted class: \"street_music\" with 99 score.\n",
-      "(166) Predicted class: \"street_music\" with 99 score.\n",
-      "(167) Predicted class: \"street_music\" with 99 score.\n",
-      "(168) Predicted class: \"street_music\" with 84 score.\n",
-      "(169) Predicted class: \"street_music\" with 99 score.\n",
-      "(170) Predicted class: \"street_music\" with 99 score.\n",
-      "(171) Predicted class: \"street_music\" with 99 score.\n",
-      "(172) Predicted class: \"street_music\" with 99 score.\n",
-      "(173) Predicted class: \"street_music\" with 99 score.\n",
-      "(174) Predicted class: \"street_music\" with 99 score.\n",
-      "(175) Predicted class: \"street_music\" with 99 score.\n",
-      "(176) Predicted class: \"street_music\" with 99 score.\n",
-      "(177) Predicted class: \"street_music\" with 99 score.\n",
-      "(178) Predicted class: \"street_music\" with 99 score.\n",
-      "(179) Predicted class: \"street_music\" with 98 score.\n",
-      "(180) Predicted class: \"children_playing\" with 99 score.\n",
-      "(181) Predicted class: \"street_music\" with 99 score.\n",
-      "(182) Predicted class: \"street_music\" with 100 score.\n",
-      "(183) Predicted class: \"street_music\" with 99 score.\n",
-      "(184) Predicted class: \"street_music\" with 99 score.\n",
-      "(185) Predicted class: \"street_music\" with 99 score.\n",
-      "(186) Predicted class: \"street_music\" with 99 score.\n",
-      "(187) Predicted class: \"street_music\" with 99 score.\n",
-      "(188) Predicted class: \"street_music\" with 100 score.\n",
-      "(189) Predicted class: \"street_music\" with 100 score.\n",
-      "(190) Predicted class: \"street_music\" with 100 score.\n",
-      "(191) Predicted class: \"street_music\" with 100 score.\n",
-      "(192) Predicted class: \"street_music\" with 99 score.\n",
-      "(193) Predicted class: \"street_music\" with 100 score.\n",
-      "(194) Predicted class: \"street_music\" with 100 score.\n",
-      "(195) Predicted class: \"street_music\" with 92 score.\n",
-      "(196) Predicted class: \"street_music\" with 95 score.\n",
-      "(197) Predicted class: \"street_music\" with 99 score.\n",
-      "(198) Predicted class: \"street_music\" with 99 score.\n",
-      "(199) Predicted class: \"street_music\" with 99 score.\n",
-      "----- done. -----\n",
-      "191 true predictions\n",
-      "8 false predictions\n",
-      "test accuracy: 95%\n",
-      "error ratio: 4%\n"
-     ]
-    }
-   ],
-   "source": [
-    "import librosa as lr\n",
-    "import octafilt3r.filter as o3f\n",
-    "import octafilt3r.plot as o3p\n",
-    "import os\n",
-    "from tensorflow.keras.models import load_model\n",
-    "\n",
-    "base_path = \"Datasets/UrbanSound8k_augmented/street_music/\"\n",
-    "fname = \"34866-9-0-5.wav\"\n",
-    "class_map = [\n",
-    "    'car_horn',\n",
-    "    'children_playing',\n",
-    "    'dog_bark',\n",
-    "    'drilling',\n",
-    "    'engine_idling',\n",
-    "    'jackhammer',\n",
-    "    'street_music'\n",
-    "]\n",
-    "stop_at = 200\n",
-    "i = 1\n",
-    "true = 0\n",
-    "false = 0\n",
-    "N4CED = load_model('NACED_V-0-1')\n",
-    "for file in os.listdir(base_path):\n",
-    "\n",
-    "    if(i == stop_at):\n",
-    "        break\n",
-    "\n",
-    "    wav, fs = lr.load(base_path + file, sr=param_dict['fs'], duration=1)\n",
-    "\n",
-    "    feats, fcs = o3f.rolling_oct_bank(\n",
-    "        wav,\n",
-    "        fs,\n",
-    "        param_dict['oct_bw_ratio'],\n",
-    "        param_dict['order'],\n",
-    "        param_dict['fmax'],\n",
-    "        param_dict['fmin'],\n",
-    "        param_dict['frame_size'],\n",
-    "        param_dict['dec_stages'],\n",
-    "        param_dict['dec_ord']\n",
-    "    )\n",
-    "\n",
-    "    feats = feats[np.newaxis, ...]\n",
-    "    X, scaler = data_scaler(feats)\n",
-    "\n",
-    "    p = N4CED.predict(X)\n",
-    "    predicted = class_map[np.argmax(p)]\n",
-    "    print(f'({i}) Predicted class: \"{predicted}\" with {int(100 * (p[0][np.argmax(p, 1)][0]))} score.')\n",
-    "    if predicted == 'street_music':\n",
-    "        true += 1\n",
-    "    else:\n",
-    "        false += 1\n",
-    "    i += 1\n",
-    "\n",
-    "print('----- done. -----')\n",
-    "print(f'{true} true predictions\\n{false} false predictions')\n",
-    "print(f'test accuracy: {int((true/i)*100)}%\\nerror ratio: {int((false/i)*100)}%')\n",
-    "\n"
+    "model.save(param_dict[\"CNN_name\"])"
    ]
   }
  ],
@@ -807,7 +520,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.1"
+   "version": "3.9.6"
   },
   "orig_nbformat": 4
  },
