--- a/Code/Jupyter/Feature Extraction.ipynb
+++ b/Code/Jupyter/Feature Extraction.ipynb
@@ -25,10 +25,7 @@
     "from octafilt3r import filter as o3f\n",
     "import librosa as lr\n",
     "import numpy as np\n",
-    "import json\n",
-    "\n",
-    "\n",
-    "user_mode = False"
+    "import pipeline.config as conf"
    ]
   },
   {
@@ -37,54 +34,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "if user_mode == 'y':\n",
-    "    txt_name = input(\"give your storage-file a name: \") + '.txt'\n",
-    "else:\n",
-    "    txt_name = \"th_oct_feature.txt\"\n",
-    "\n",
-    "std_txt_fp = \"Datasets/Feature_extraction/th_oct_coeffs.txt\"\n",
-    "source_dir = 'Datasets/UrbanSound8k_augmented/'\n",
-    "\n",
-    "fs = 48000                              # sample rate\n",
-    "fmin = 100                              # lowest f of interest\n",
-    "fmax = 12800                            # highest f of interest\n",
-    "oct_bw_ratio = 1/3                      # octave / amount of subdivisions\n",
-    "order = 8                               # order of octave filters\n",
-    "\n",
-    "n_coeffs_p_section = 6                  # constant, definition of sos-matrix\n",
-    "n_sections = int(order/2)               # number of biquads (order 2 filters)\n",
-    "dec_stages = 4                          # number of decimations across bank\n",
-    "dec_ord = 10                            # order of decimation AA-filters\n",
-    "\n",
-    "frame_size = 1000                      # framing size\n",
-    "fps = int(fs / frame_size)\n",
-    "window_size = fs * 1\n",
-    "max_dur = 5                            # max duration of sound in s\n",
-    "_, _, _, n_bands = o3f._gen_fc_fl_fu(fmax, fmin, oct_bw_ratio)\n",
-    "\n",
-    "param_dict_fp = 'param_dict.json'\n",
-    "param_dict = {  \n",
-    "    \"txt name\":txt_name,\n",
-    "    \"std_txt_fp\":std_txt_fp,\n",
-    "    \"source_dir\":source_dir,\n",
-    "    \"fs\":fs,\n",
-    "    \"fmin\":fmin,\n",
-    "    \"fmax\":fmax,\n",
-    "    \"oct_bw_ratio\":oct_bw_ratio,\n",
-    "    \"order\":order,\n",
-    "    \"n_coeffs_p_section\":n_coeffs_p_section,\n",
-    "    \"n_sections\":n_sections,\n",
-    "    \"dec_stages\":dec_stages,\n",
-    "    \"dec_ord\":dec_ord,\n",
-    "    \"frame_size\": frame_size,\n",
-    "    \"fps\":fps,\n",
-    "    \"window_size\": window_size,\n",
-    "    \"max_dur\":max_dur,\n",
-    "    \"n_bands\":n_bands\n",
-    "}\n",
-    "\n",
-    "with open(param_dict_fp, 'w') as f:\n",
-    "    json.dump(param_dict, f)"
+    "param_dict = conf.open_params()"
    ]
   },
   {
@@ -12968,27 +12918,33 @@
     "\n",
     "df = []\n",
     "labels = []\n",
-    "for class_ in os.listdir(source_dir):\n",
+    "for class_ in os.listdir(param_dict[\"source_dir\"]):\n",
     "    cnt = 1\n",
-    "    for filename in os.listdir(f'{source_dir}{class_}'):\n",
+    "    for filename in os.listdir(f'{param_dict[\"source_dir\"]}{class_}'):\n",
     "\n",
     "        print(f'Currently extracting features in \"{class_}\" from {filename} (# {cnt})')\n",
     "\n",
-    "        wav = f'{source_dir}{class_}/{filename}'\n",
-    "        y, sr = lr.load(wav, sr=fs, mono=True, duration=max_dur)\n",
+    "        wav = f'{param_dict[\"source_dir\"]}{class_}/{filename}'\n",
+    "        y, sr = lr.load(wav, sr=param_dict[\"fs\"], mono=True, duration=param_dict[\"max_dur\"])\n",
     "\n",
-    "        wins = int(len(y)/window_size)\n",
+    "        wins = int(len(y)/param_dict[\"window_size\"])\n",
     "        if wins == 0:\n",
     "            files_ignored += 1\n",
     "            print('*ignored, file under 1 second long*')\n",
     "            continue    # skip files which are shorter than 1s\n",
     "\n",
     "        # obtain features of whole file\n",
-    "        feats, fcs = o3f.rolling_oct_bank(y, fs, ratio=oct_bw_ratio, fmax=fmax, fmin=fmin, frame_size=frame_size, n_decimations=dec_stages)\n",
+    "        feats, fcs = o3f.rolling_oct_bank(y, \n",
+    "                                        param_dict[\"fs\"], \n",
+    "                                        ratio=param_dict[\"oct_bw_ratio\"], \n",
+    "                                        fmax=param_dict[\"fmax\"], \n",
+    "                                        fmin=param_dict[\"fmin\"], \n",
+    "                                        frame_size=param_dict[\"frame_size\"], \n",
+    "                                        n_decimations=param_dict[\"dec_stages\"])\n",
     "\n",
     "        print(f'\\tSplitting \"{filename}\" into {wins} 1-second part(s)')\n",
     "        for win in range(wins):    # ignore parts of file which is not in a full window\n",
-    "            cur_feats = feats[fps * win:fps * (win + 1)]\n",
+    "            cur_feats = feats[param_dict[\"fps\"] * win:param_dict[\"fps\"] * (win + 1)]\n",
     "            df.append(cur_feats)\n",
     "            labels.append(class_)\n",
     "        cnt += 1\n",
@@ -12999,8 +12955,8 @@
     "df = np.transpose(df, (2, 0, 1))\n",
     "\n",
     "df_2d = df.reshape(df.shape[0], -1)\n",
-    "np.savetxt(\"Datasets/Feature_extraction/th_oct_feature.txt\", df_2d)\n",
-    "with open(\"Datasets/Feature_extraction/labels.txt\", \"w\") as f:\n",
+    "np.savetxt(param_dict[\"extr_txt_fp\"], df_2d)\n",
+    "with open(param_dict[\"label_txt_fp\"], \"w\") as f:\n",
     "    for i in labels:\n",
     "        f.writelines(i + '\\n')\n",
     "\n",
@@ -13029,7 +12985,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.1"
+   "version": "3.9.6"
   },
   "orig_nbformat": 4
  },
