data augmentation and auto-description writer for CNNs

--- a/Code/Jupyter/CNN Training.ipynb
+++ b/Code/Jupyter/CNN Training.ipynb
@@ -497,7 +497,8 @@
     "score, accuracy = model.evaluate(X_test, y_test, batch_size=4)\n",
     "print(\"\\nAccuracy = {:.2f}\".format(accuracy))\n",
     "\n",
-    "model.save(param_dict[\"CNN_name\"])"
+    "model.save(param_dict[\"CNN_name\"])\n",
+    "conf.add_NN_description(param_dict)"
    ]
   }
  ],
