--- a/Code/Jupyter/CNN inference.ipynb
+++ b/Code/Jupyter/CNN inference.ipynb
@@ -15,7 +15,6 @@
    "source": [
     "import librosa as lr\n",
     "import octafilt3r.filter as o3f\n",
-    "import octafilt3r.plot as o3p\n",
     "import os\n",
     "from tensorflow.keras.models import load_model\n",
     "import numpy as np\n",
@@ -58,19 +57,25 @@
     "true = 0\n",
     "false = 0\n",
     "\n",
-    "N4CED = load_model('N4CED_V-0-1')\n",
+    "N4CED = load_model(param_dict[\"model_name\"])\n",
     "\n",
     "for file in os.listdir(base_path):\n",
     "\n",
     "    if(i == stop_at):\n",
     "        break\n",
     "\n",
+    "    \"\"\"\n",
+    "    LOAD DATA\n",
+    "    \"\"\"\n",
     "    wav, fs = lr.load(base_path + file, sr=param_dict['fs'], duration=param_dict[\"max_dur\"])\n",
     "\n",
     "    if len(wav) < fs:\n",
     "        continue\n",
     "\n",
     "\n",
+    "    \"\"\"\n",
+    "    EXTRACT FEATURES\n",
+    "    \"\"\"\n",
     "    feats, fcs = o3f.rolling_oct_bank(\n",
     "        wav,\n",
     "        fs,\n",
@@ -83,10 +88,28 @@
     "        param_dict['dec_ord']\n",
     "    )\n",
     "\n",
+    "\n",
+    "    \"\"\"\n",
+    "    RESHAPE FEATURES\n",
+    "    \"\"\"\n",
     "    df = scale.feats2frames(feats, param_dict['frame_size'], fs)\n",
     "\n",
+    "\n",
+    "    \"\"\"\n",
+    "    SCALE FEATURES\n",
+    "    \"\"\"\n",
     "    X, scaler = scale.data_scaler(df)\n",
+    "\n",
+    "\n",
+    "    \"\"\"\n",
+    "    RUN MODEL\n",
+    "    \"\"\"\n",
     "    p = N4CED.predict(X)\n",
+    "\n",
+    "\n",
+    "    \"\"\"\n",
+    "    PROCESS RESULTS\n",
+    "    \"\"\"\n",
     "    predicted = param_dict[\"class_map\"][np.argmax(np.mean(p, axis=0))]\n",
     "    print(f'Predicted class: \"{predicted}\" with {int(100 * (p[0][np.argmax(p, 1)][0]))} score.')\n",
     "    if predicted == 'street_music':\n",
