--- a/Code/Jupyter/UrbanSound8k augmented.ipynb
+++ b/Code/Jupyter/UrbanSound8k augmented.ipynb
@@ -17,7 +17,6 @@
    "source": [
     "import augmolino.augmentation as augmolino\n",
     "import os\n",
-    "import IPython.display as ipd\n",
     "\n",
     "user_mode = False"
    ]
@@ -38,58 +37,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": null,
    "id": "2af59912-70e4-4838-b31b-37bc446fb9a4",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Starting augmentation, this may take some time...\n"
-     ]
-    },
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "Are you sure you want to proceed? y/n:  y\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "\n",
-      "Augmenting...\n",
-      "selected path: Datasets/UrbanSound8k_augmented/\n",
-      "registered dirs: \n",
-      "\tair_conditioner\n",
-      "\tcar_horn\n",
-      "\tchildren_playing\n",
-      "\tdog_bark\n",
-      "\tdrilling\n",
-      "\tengine_idling\n",
-      "\tgun_shot\n",
-      "\tjackhammer\n",
-      "\tsiren\n",
-      "\tstreet_music\n",
-      "\n",
-      "Augmenting in Folder < air_conditioner >:\n",
-      "\tfile: 100852-0-0-0.wav\n",
-      "Folder < air_conditioner > done.\n",
-      "\n",
-      "\n",
-      "augmentation done. 1 source files augmented to 1 new files. Total file count: 2\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(\"Starting augmentation, this may take some time...\")\n",
     "d = input(\"Are you sure you want to proceed? y/n: \")\n",
     "i = 0\n",
-    "n_augmentations = 1\n",
+    "n_augmentations = 5\n",
+    "noise_fp = \"demo_data/noise_b_mili.wav\"\n",
     "if d == \"y\":\n",
     "\n",
     "    path, dirs, files = next(os.walk(main_folder))\n",
@@ -103,8 +60,14 @@
     "        for wav in files:\n",
     "            fp = main_folder + nscls + '/' + wav\n",
     "            print(f'\\tfile: {wav}')\n",
-    "            fp_dest = main_folder + nscls + '/pSu_' + wav\n",
+    "            fp_dest_psu1 = main_folder + nscls + '/psu1_' + wav\n",
+    "            fp_dest_psu2 = main_folder + nscls + '/psu2_' + wav\n",
+    "            fp_dest_psd1 = main_folder + nscls + '/psd1_' + wav\n",
+    "            fp_dest_psd2 = main_folder + nscls + '/psd2_' + wav\n",
+    "            fp_dest_n = main_folder + nscls + '/n_' + wav\n",
     "            i += 1\n",
+    "\n",
+    "            \n",
     "            # Enter augmentation methods here:\n",
     "            #---------------------------------\n",
     "            \n",
@@ -112,14 +75,13 @@
     "            As proposed by Justin Salamon & Juan Pablo Bello in \"Deep Convolutional Neural Networks and Data\n",
     "            Augmentation for Environmental Sound Classification\" it seems that \"pitch shift 1 & 2\" and \"back\n",
     "            ground noise\" yield the best increase in performance:\n",
-    "            \n",
-    "            --> wait for outdoorstations to give you long samples of bg-noise for the fuseAudio method\n",
     "            '''\n",
     "            \n",
-    "            # augmolino.pitchShift(fp, fp_dest, 1)\n",
-    "            # augmolino.pitchShift(fp, fp_dest, 2)\n",
-    "            # augmolino.pitchShift(fp, fp_dest, -1)\n",
-    "            # augmolino.pitchShift(fp, fp_dest, -2)\n",
+    "            augmolino.pitchShift(fp, fp_dest_psu1, 1)\n",
+    "            augmolino.pitchShift(fp, fp_dest_psu2, 2)\n",
+    "            augmolino.pitchShift(fp, fp_dest_psd1, -1)\n",
+    "            augmolino.pitchShift(fp, fp_dest_psd2, -2)\n",
+    "            augmolino.fuseAudio(fp, noise_fp, fp_dest_n, lvl_ratio=0.6)\n",
     "            \n",
     "            #---------------------------------\n",
     "        print(f'Folder < {nscls} > done.')\n",
@@ -127,14 +89,6 @@
     "else:\n",
     "    print(\"op cancelled.\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ef0a0fc0-6b07-497b-9dad-c7fcd575f9f3",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
